@@ -1,3 +1,9 @@
+2008-01-06  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/treeview.tcl, library/ttk/utils.tcl:
+	Fix MouseWheel bindings for ttk::treeview widget
+	(Fixes #1442006, #1821939, #1862692)
+
 2008-01-02  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tk.h:		Bump version number to 8.5.1b1 to distinguish
